@@ -1,21 +1,25 @@
 package thelm.packagedexcrafting.recipe;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.commons.lang3.ArrayUtils;
 
 import com.blakebr0.extendedcrafting.init.ModBlocks;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.ints.IntRBTreeSet;
 import it.unimi.dsi.fastutil.ints.IntSet;
 import net.minecraft.core.Vec3i;
+import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.Level;
 import thelm.packagedauto.api.IPackageRecipeInfo;
 import thelm.packagedauto.api.IPackageRecipeType;
 import thelm.packagedauto.api.IRecipeSlotViewWrapper;
@@ -24,9 +28,9 @@ import thelm.packagedauto.api.IRecipeSlotsViewWrapper;
 public class CombinationPackageRecipeType implements IPackageRecipeType {
 
 	public static final CombinationPackageRecipeType INSTANCE = new CombinationPackageRecipeType();
-	public static final ResourceLocation NAME = new ResourceLocation("packagedexcrafting:combination");
+	public static final ResourceLocation NAME = ResourceLocation.parse("packagedexcrafting:combination");
 	public static final IntSet SLOTS;
-	public static final List<ResourceLocation> CATEGORIES = Collections.singletonList(new ResourceLocation("extendedcrafting:combination"));
+	public static final List<ResourceLocation> CATEGORIES = List.of(ResourceLocation.parse("extendedcrafting:combination"));
 	public static final Vec3i COLOR = new Vec3i(139, 139, 139);
 	public static final Vec3i COLOR_CENTER = new Vec3i(139, 139, 179);
 	public static final Vec3i COLOR_DISABLED = new Vec3i(64, 64, 64);
@@ -56,8 +60,23 @@ public class CombinationPackageRecipeType implements IPackageRecipeType {
 	}
 
 	@Override
-	public IPackageRecipeInfo getNewRecipeInfo() {
-		return new CombinationPackageRecipeInfo();
+	public MapCodec<? extends IPackageRecipeInfo> getRecipeInfoMapCodec() {
+		return CombinationPackageRecipeInfo.MAP_CODEC;
+	}
+
+	@Override
+	public Codec<? extends IPackageRecipeInfo> getRecipeInfoCodec() {
+		return CombinationPackageRecipeInfo.CODEC;
+	}
+
+	@Override
+	public StreamCodec<RegistryFriendlyByteBuf, ? extends IPackageRecipeInfo> getRecipeInfoStreamCodec() {
+		return CombinationPackageRecipeInfo.STREAM_CODEC;
+	}
+
+	@Override
+	public IPackageRecipeInfo generateRecipeInfoFromStacks(List<ItemStack> inputs, List<ItemStack> outputs, Level level) {
+		return new CombinationPackageRecipeInfo(inputs, level);
 	}
 
 	@Override
